src/test/resources/scripts/language/parser/valid/list/2d/2dListTup.sbsc
// test a list of lists


a = [("a", 2), ("a", 2), ("a", 2)];

b = [("a", 2), ("a", 2)];


d = [a, b];

return true;