src/test/resources/scripts/language/parser/invalid/list/nonIntIndexInt.sbsc
// parser should fail when indexing a list with something that isn't INT.

a = [1, 2, 3];

b = "2";

a[b];

return false;